methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:4: error: not found: value makeFlower
for (i<-1 to 6) {forward()}; left(); forward(); forward(); right(); makeFlower(Color.BLUE); forward(); forward(); left(); forward(); forward(); right(); makepattern(); right(); forward(); left(); for (i<-1 to 8) {backward()}; right(); for (i<-1 to 4) {forward()}; right();    makepattern()                   
                                                                    ^FlowerCase:5: error: not found: value makeFlower
for (i<-1 to 6) {forward()}; left(); forward(); forward(); right(); makeFlower(Color.BLUE); forward(); forward(); left(); forward(); forward(); right(); makepattern()            } 
                                                                    ^